--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ subscribe_rss: http://feeds.feedburner.com/TechOpener
 # Disqus Comments
 disqus_short_name: techopener
 disqus_show_comment_count: false
+url: http://techopener.com
 
 # Google Analytics
 google_analytics_tracking_id: UA-21779145-1
